--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ header {
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 #footer {
@@ -90,11 +90,11 @@ header {
 
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
   width: 100%;
   height: 80px;
-  ;
-  background-color: #252831;
-  text-align: center;
+  background-color: black;
+  text-align:center;
 }
 
 nav h1 {
@@ -244,6 +244,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+
 .inside header {
   position: fixed;
   top: 0;
@@ -394,9 +395,22 @@ nav h1 a {
 
   .inside #map-container {
     height: 87%;
-    position: absolute;
+    position: relative;
     width: 100%;
+    height: 270px;
     top: 0;
+  }
+
+  .inside #map {
+    height: 200%;
+  }
+
+  #restaurant-container{
+    margin-top: 70%;
+  }
+
+  #restaurant-cuisine{
+    width: 100%;
   }
 
 
