--- a/css/styles.css
+++ b/css/styles.css
@@ -90,9 +90,9 @@ header {
 
 /* ====================== Navigation ====================== */
 nav {
-  display: flex;
+  display: block;
   width: 100%;
-  height: 80px;
+  /* height: 80px; */
   background-color: black;
   text-align:center;
 }
